--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -18,6 +18,7 @@
 
 		<script src="js/angular-file-upload.js"></script>
 		<script src="js/app.js"></script>
+		<script src="js/ui-bootstrap-tpls.js"></script>
 	</head>
 
 	<body ng-app="Jmxtrans">
