--- a/src/main/webapp/server.html
+++ b/src/main/webapp/server.html
@@ -42,6 +42,8 @@
 					</div>
 				</div>
 
+				<button type="button" class="btn btn-lg btn-block btn-default" ng-click="loadJMXTree()">Load JMX tree for {{ server.server.host }}:{{ server.server.port }}</button>
+
 			</div>
 
 			<hr>
