--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -54,30 +54,15 @@
 									<div class="form-group">
 										<label class="control-label">Writer</label>
 										<select type="text" class="form-control" ng-model="writer['@class']" ng-change="writerChange()">
-											<option value="com.googlecode.jmxtrans.model.output.Graphite">Graphite</option>
 											<option value="com.googlecode.jmxtrans.model.output.BluefloodWriter">Blueflood</option>
+											<option value="com.googlecode.jmxtrans.model.output.DailyKeyOutWriter">DailyKeyOutWriter</option>
+											<option value="com.googlecode.jmxtrans.model.output.GraphiteWriter">Graphite</option>
 										</select>
 									</div>
 
-									<div class="form-group">
-										<label class="control-label">Host</label>
-										<input type="text" class="form-control" ng-model="writer.settings.host">
-									</div>
-									
-									<div class="form-group">
-										<label class="control-label">Port</label>
-										<input type="text" class="form-control" ng-model="writer.settings.port">
-									</div>
-
-									<div class="form-group">
-										<label class="control-label">Username</label>
-										<input type="text" class="form-control" ng-model="writer.settings.username">
-									</div>
-
-									<div class="form-group">
-										<label class="control-label">Password</label>
-										<input type="password" class="form-control" ng-model="writer.settings.password">
-									</div>
+									<blueflood-writer-form writer="writer" ng-show="writer['@class'] == 'com.googlecode.jmxtrans.model.output.BluefloodWriter'"></blueflood-writer-form>
+									<daily-key-out-writer-form writer="writer" ng-show="writer['@class'] == 'com.googlecode.jmxtrans.model.output.DailyKeyOutWriter'"></daily-key-out-writer-form>
+									<graphite-writer-form writer="writer" ng-show="writer['@class'] == 'com.googlecode.jmxtrans.model.output.GraphiteWriter'"></graphite-writer-form>
 																	
 								</div>
 								<div class="modal-footer">
