Validation is now working

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -183,7 +183,7 @@
 
 						<server ng-hide="blankServer" ng-repeat="server in servers" server="server" index="$index" writer="writer" update-servers-list="updateServersList"></server>
 
-						<server ng-show="blankServer" server="blankServer" writer="writer" update-servers-list="updateServersList"></server>
+						<server ng-show="blankServer" server="blankServer" writer="writer" update-servers-list="updateServersList" index="0"></server>
 
 					</div>
 				</div>
