--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -33,6 +33,8 @@
 
 			<div class="row">
 
+				<alert ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert($index)">{{ alert.message }}</alert>
+
 				<div class="col-xs-3">
 
 					<button ng-hide="blankServer" type="button" class="btn btn-primary btn-lg btn-block" ng-click="addBlankServer()">Create new server</button>
@@ -185,9 +187,9 @@
 				<div class="col-xs-9">
 					<div class="panel-group" id="server-accordion" role="tablist" aria-multiselectable="true">
 
-						<server ng-hide="blankServer" ng-repeat="server in servers" server="server" index="$index" writer="writer" update-servers-list="updateServersList"></server>
+						<server ng-hide="blankServer" ng-repeat="server in servers" server="server" index="$index" writer="writer" update-servers-list="updateServersList" alerts="alerts"></server>
 
-						<server ng-show="blankServer" server="blankServer" writer="writer" update-servers-list="updateServersList" index="0"></server>
+						<server ng-show="blankServer" server="blankServer" writer="writer" update-servers-list="updateServersList" index="0" alerts="alerts"></server>
 
 					</div>
 				</div>
