--- a/jmxtrans-gui/src/main/site/index.html
+++ b/jmxtrans-gui/src/main/site/index.html
@@ -1,247 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <title>jmxtrans GUI</title>
+  <meta charset="utf-8">
+  <title>jmxtrans GUI</title>
 
-    <!-- build:css({.tmp/serve,src/main/site}) styles/vendor.css -->
-    <link rel="stylesheet" href="app/vendor.css">
-    <!-- bower:css -->
-    <!-- run `gulp inject` to automatically populate bower styles dependencies -->
-    <!-- endbower -->
-    <!-- endbuild -->
+  <!-- build:css({.tmp/serve,src/main/site}) styles/vendor.css -->
+  <link rel="stylesheet" href="app/vendor.css">
+  <!-- bower:css -->
+  <!-- run `gulp inject` to automatically populate bower styles dependencies -->
+  <!-- endbower -->
+  <!-- endbuild -->
 
-    <!-- build:css({.tmp/serve,src/main/site}) styles/app.css -->
-    <!-- inject:css -->
-    <!-- css files will be automatically insert here -->
-    <!-- endinject -->
-    <!-- endbuild -->
+  <!-- build:css({.tmp/serve,src/main/site}) styles/app.css -->
+  <!-- inject:css -->
+  <!-- css files will be automatically insert here -->
+  <!-- endinject -->
+  <!-- endbuild -->
 
 </head>
 
 <body ng-app="jmxtransGui">
 
 <div class="jumbotron">
-    <div class="container">
-        <h1>Jmxtrans GUI</h1>
-    </div>
+  <div class="container">
+    <h1>Jmxtrans GUI</h1>
+  </div>
 </div>
 
 <div class="container-fluid" ng-controller="Main">
 
-    <div class="row">
+  <div class="row">
 
-        <alert ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert($index)">{{ alert.message }}</alert>
-        <alert type="warning" ng-show="!writer['@class']">No writer setted.</alert>
+    <alert type="warning" ng-show="!writer['@class']">No writer setted.</alert>
 
-        <div class="col-xs-3">
+    <div class="col-xs-3">
 
-            <button ng-hide="blankServer" type="button" class="btn btn-primary btn-lg btn-block"
-                    ng-click="addBlankServer()">Create new server
-            </button>
-            <button ng-show="blankServer" type="button" class="btn btn-default btn-lg btn-block"
-                    ng-click="cancelBlankServer()">Cancel
-            </button>
-            <button type="button" class="btn btn-default btn-lg btn-block" data-toggle="modal" data-target="#upload">
-                <span class="glyphicon glyphicon-upload"></span> Load JSON files
-            </button>
-            <button type="button" class="btn btn-default btn-lg btn-block" data-toggle="modal" data-target="#settings">
-                <span class="glyphicon glyphicon-cog"></span> Settings
-            </button>
-
-
-            <div class="modal fade" id="settings" tabindex="-1" role="dialog" aria-labelledby="settings"
-                 aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
-                                    aria-hidden="true">&times;</span></button>
-                            <h4 class="modal-title" id="myModalLabel">Settings
-                                <small>Output writer information</small>
-                            </h4>
-                        </div>
-                        <div class="modal-body">
+      <button ng-hide="blankServer" type="button" class="btn btn-primary btn-lg btn-block"
+              ng-click="addBlankServer()">Create new server
+      </button>
+      <button ng-show="blankServer" type="button" class="btn btn-default btn-lg btn-block"
+              ng-click="cancelBlankServer()">Cancel
+      </button>
+      <button type="button" class="btn btn-default btn-lg btn-block" ng-click="openUploader()">
+        <span class="glyphicon glyphicon-upload"></span> Load JSON files
+      </button>
+      <button type="button" class="btn btn-default btn-lg btn-block" ng-click="openWriter()">
+        <span class="glyphicon glyphicon-cog"></span> Settings
+      </button>
 
 
-                            <div class="form-group">
-                                <label class="control-label">Writer</label>
-                                <select type="text" class="form-control" ng-model="writer['@class']"
-                                        ng-change="writerChange()">
-                                    <option value="com.googlecode.jmxtrans.model.output.BluefloodWriter">Blueflood
-                                    </option>
-                                    <option value="com.googlecode.jmxtrans.model.output.DailyKeyOutWriter">
-                                        DailyKeyOutWriter
-                                    </option>
-                                    <option value="com.googlecode.jmxtrans.model.output.GangliaWriter">Ganglia</option>
-                                    <option value="com.googlecode.jmxtrans.model.output.GraphiteWriter">Graphite
-                                    </option>
-                                    <option value="com.googlecode.jmxtrans.model.output.RRDToolWriter">RRDTool</option>
-                                    <option value="com.googlecode.jmxtrans.model.output.StatsDWriter">StatsD</option>
-                                </select>
-                            </div>
+      <br>
 
-                            <blueflood-writer-form writer="writer"
-                                                   ng-show="writer['@class'] == 'com.googlecode.jmxtrans.model.output.BluefloodWriter'"></blueflood-writer-form>
-                            <daily-key-out-writer-form writer="writer"
-                                                       ng-show="writer['@class'] == 'com.googlecode.jmxtrans.model.output.DailyKeyOutWriter'"></daily-key-out-writer-form>
-                            <graphite-writer-form writer="writer"
-                                                  ng-show="writer['@class'] == 'com.googlecode.jmxtrans.model.output.GraphiteWriter'"></graphite-writer-form>
-                            <ganglia-writer-form writer="writer"
-                                                 ng-show="writer['@class'] == 'com.googlecode.jmxtrans.model.output.GangliaWriter'"></ganglia-writer-form>
-                            <stats-d-writer-form writer="writer"
-                                                 ng-show="writer['@class'] == 'com.googlecode.jmxtrans.model.output.StatsDWriter'"></stats-d-writer-form>
-                            <rrd-tool-writer-form writer="writer"
-                                                  ng-show="writer['@class'] == 'com.googlecode.jmxtrans.model.output.RRDToolWriter'"></rrd-tool-writer-form>
-
-
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-primary" ng-click="saveWriter()">Save changes</button>
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                        </div>
-                    </div>
-                </div>
+      <div class="well servers-list">
+        <ul class="nav nav-pills nav-stacked">
+          <li class="server-item" ng-repeat="item in list" role="presentation">
+            <div class="row">
+              <div class="col-sm-7">
+                <a class="btn btn-link" ng-click="display(item.host, item.port)">
+                  {{ item.host }}:{{ item.port }}
+                </a>
+              </div>
+              <div class="col-sm-5">
+                <a class="btn btn-link"
+                   ng-href="service/server/_download?host={{ item.host }}&port={{ item.port }}"
+                   style="display: inline-block;">
+                  <span class="glyphicon glyphicon-download-alt"></span>
+                </a>
+                <a class="btn btn-link" ng-click="duplicate(item.host, item.port)"
+                   style="display: inline-block;">
+                  <span class="glyphicon glyphicon-copy"></span>
+                </a>
+                <a class="btn btn-link" ng-click="delete(item.host, item.port)"
+                   style="display: inline-block;">
+                  <span class="glyphicon glyphicon-trash"></span>
+                </a>
+              </div>
             </div>
-
-
-            <div class="modal fade" id="upload" tabindex="-1" role="dialog" aria-labelledby="upload" aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
-                                    aria-hidden="true">&times;</span></button>
-                            <h4 class="modal-title" id="myModalLabel">Upload JSON conf files</h4>
-                        </div>
-                        <div class="modal-body">
-
-                            <h3>Select files</h3>
-
-                            <div class="form-group">
-                                <input type="file" nv-file-select uploader="uploader" multiple>
-                            </div>
-
-                            <h3>Upload queue</h3>
-
-                            <p>Queue length: {{ uploader.queue.length }}</p>
-
-                            <table class="table">
-                                <thead>
-                                <tr>
-                                    <th width="50%">Name</th>
-                                    <th ng-show="uploader.isHTML5">Size</th>
-                                    <th ng-show="uploader.isHTML5">Progress</th>
-                                    <th>Status</th>
-                                    <th>Action</th>
-                                </tr>
-                                </thead>
-                                <tbody>
-                                <tr ng-repeat="item in uploader.queue">
-                                    <td><strong>{{ item.file.name }}</strong></td>
-                                    <td ng-show="uploader.isHTML5" nowrap>{{ item.file.size/1024/1024|number:2 }} MB
-                                    </td>
-                                    <td ng-show="uploader.isHTML5">
-                                        <div class="progress" style="margin-bottom: 0;">
-                                            <div class="progress-bar" role="progressbar"
-                                                 ng-style="{ 'width': item.progress + '%' }"></div>
-                                        </div>
-                                    </td>
-                                    <td class="text-center">
-                                        <span ng-show="item.isSuccess"><i class="glyphicon glyphicon-ok"></i></span>
-                                        <span ng-show="item.isCancel"><i
-                                                class="glyphicon glyphicon-ban-circle"></i></span>
-                                        <span ng-show="item.isError"><i class="glyphicon glyphicon-remove"></i></span>
-                                    </td>
-                                    <td nowrap>
-                                        <button type="button" class="btn btn-success btn-xs" ng-click="item.upload()"
-                                                ng-disabled="item.isReady || item.isUploading || item.isSuccess">
-                                            <span class="glyphicon glyphicon-upload"></span> Upload
-                                        </button>
-                                        <button type="button" class="btn btn-warning btn-xs" ng-click="item.cancel()"
-                                                ng-disabled="!item.isUploading">
-                                            <span class="glyphicon glyphicon-ban-circle"></span> Cancel
-                                        </button>
-                                        <button type="button" class="btn btn-danger btn-xs" ng-click="item.remove()">
-                                            <span class="glyphicon glyphicon-trash"></span> Remove
-                                        </button>
-                                    </td>
-                                </tr>
-                                </tbody>
-                            </table>
-
-                            <div>
-                                <div>
-                                    Queue progress:
-                                    <div class="progress" style="">
-                                        <div class="progress-bar" role="progressbar"
-                                             ng-style="{ 'width': uploader.progress + '%' }"></div>
-                                    </div>
-                                </div>
-                                <button type="button" class="btn btn-success btn-s" ng-click="uploader.uploadAll()"
-                                        ng-disabled="!uploader.getNotUploadedItems().length">
-                                    <span class="glyphicon glyphicon-upload"></span> Upload all
-                                </button>
-                                <button type="button" class="btn btn-warning btn-s" ng-click="uploader.cancelAll()"
-                                        ng-disabled="!uploader.isUploading">
-                                    <span class="glyphicon glyphicon-ban-circle"></span> Cancel all
-                                </button>
-                                <button type="button" class="btn btn-danger btn-s" ng-click="uploader.clearQueue()"
-                                        ng-disabled="!uploader.queue.length">
-                                    <span class="glyphicon glyphicon-trash"></span> Remove all
-                                </button>
-                            </div>
-
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-
-            <br>
-
-            <div class="well servers-list">
-                <ul class="nav nav-pills nav-stacked">
-                    <li class="server-item" ng-repeat="item in list" role="presentation">
-                        <div class="row">
-                            <div class="col-sm-7">
-                                <a class="btn btn-link" ng-click="display(item.host, item.port)">
-                                    {{ item.host }}:{{ item.port }}
-                                </a>
-                            </div>
-                            <div class="col-sm-5">
-                                <a class="btn btn-link"
-                                   ng-href="service/server/_download?host={{ item.host }}&port={{ item.port }}"
-                                   style="display: inline-block;">
-                                    <span class="glyphicon glyphicon-download-alt"></span>
-                                </a>
-                                <a class="btn btn-link" ng-click="duplicate(item.host, item.port)"
-                                   style="display: inline-block;">
-                                    <span class="glyphicon glyphicon-copy"></span>
-                                </a>
-                                <a class="btn btn-link" ng-click="delete(item.host, item.port)"
-                                   style="display: inline-block;">
-                                    <span class="glyphicon glyphicon-trash"></span>
-                                </a>
-                            </div>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-
-        </div>
-
-        <div class="col-xs-9">
-
-            <server ng-hide="blankServer || !server" server="server" alerts="alerts"></server>
-
-            <server ng-show="blankServer" server="blankServer" alerts="alerts"></server>
-
-        </div>
+          </li>
+        </ul>
+      </div>
 
     </div>
+
+    <div class="col-xs-9">
+
+      <server ng-hide="blankServer || !server" server="server" alerts="alerts"></server>
+
+      <server ng-show="blankServer" server="blankServer" alerts="alerts"></server>
+
+    </div>
+
+  </div>
 
 </div>
 
@@ -262,3 +111,5 @@
 <!-- endbuild -->
 </body>
 </html>
+
+
