--- a/jmxtrans-gui/src/main/site/index.html
+++ b/jmxtrans-gui/src/main/site/index.html
@@ -29,9 +29,9 @@
 
 <div class="container-fluid" ng-controller="Main">
 
-  <div class="row">
+  <toast></toast>
 
-    <alert type="warning" ng-show="!writer['@class']">No writer setted.</alert>
+  <div class="row">
 
     <div class="col-xs-3">
 
