Add bootswatch to bower file

--- a/jmxtrans-gui/src/main/site/index.html
+++ b/jmxtrans-gui/src/main/site/index.html
@@ -65,7 +65,7 @@
               <div class="col-sm-5">
                 <button class="btn btn-link"
                    ng-click="download(item.host, item.port)" style="display: inline-block;">
-                  <span class="fa fa-download-alt"></span>
+                  <span class="fa fa-download"></span>
                 </button>
                 <button class="btn btn-link" ng-click="unSavedChanges(duplicate, item.host, item.port)"
                    style="display: inline-block;">
