--- a/jmxtrans-gui/src/index.html
+++ b/jmxtrans-gui/src/index.html
@@ -4,14 +4,14 @@
   <meta charset="utf-8">
   <title>jmxtrans GUI</title>
 
-  <!-- build:css({.tmp/serve,src/main/site}) styles/vendor.css -->
+  <!-- build:css({.tmp/serve,src}) styles/vendor.css -->
   <link rel="stylesheet" href="app/vendor.css">
   <!-- bower:css -->
   <!-- run `gulp inject` to automatically populate bower styles dependencies -->
   <!-- endbower -->
   <!-- endbuild -->
 
-  <!-- build:css({.tmp/serve,src/main/site}) styles/app.css -->
+  <!-- build:css({.tmp/serve,src}) styles/app.css -->
   <!-- inject:css -->
   <!-- css files will be automatically insert here -->
   <!-- endinject -->
@@ -95,13 +95,13 @@
 
 </div>
 
-<!-- build:js(src/main/site) scripts/vendor.js -->
+<!-- build:js(src) scripts/vendor.js -->
 <!-- bower:js -->
 <!-- run `gulp inject` to automatically populate bower script dependencies -->
 <!-- endbower -->
 <!-- endbuild -->
 
-<!-- build:js({.tmp/serve,.tmp/partials,src/main/site}) scripts/app.js -->
+<!-- build:js({.tmp/serve,.tmp/partials,src}) scripts/app.js -->
 <!-- inject:js -->
 <!-- js files will be automatically insert here -->
 <!-- endinject -->
