--- a/jmxtrans-gui/src/index.html
+++ b/jmxtrans-gui/src/index.html
@@ -58,21 +58,21 @@
           <li class="server-item" ng-repeat="item in list" role="presentation">
             <div class="row">
               <div class="col-sm-7">
-                <button class="btn btn-link" ng-click="unSavedChanges(display, item.host, item.port)">
+                <button class="btn btn-link" ng-click="unSavedChanges(display, item.host, item.port)" popover="{{ item.host }}:{{ item.port }}" popover-trigger="mouseenter">
                   {{ item.host }}:{{ item.port }}
                 </button>
               </div>
               <div class="col-sm-5">
                 <button class="btn btn-link"
-                        ng-click="download(item.host, item.port)" style="display: inline-block;">
+                        ng-click="download(item.host, item.port)" style="display: inline-block;" popover="Download" popover-trigger="mouseenter">
                   <span class="fa fa-download"></span>
                 </button>
                 <button class="btn btn-link" ng-click="unSavedChanges(duplicate, item.host, item.port)"
-                        style="display: inline-block;">
+                        style="display: inline-block;" popover="Duplicate" popover-trigger="mouseenter">
                   <span class="fa fa-copy"></span>
                 </button>
                 <button class="btn btn-link" ng-click="deleteConfirmation(item.host, item.port)"
-                        style="display: inline-block;">
+                        style="display: inline-block;" popover="Delete" popover-trigger="mouseenter">
                   <span class="fa fa-trash"></span>
                 </button>
               </div>
