--- a/jmxtrans-gui/src/index.html
+++ b/jmxtrans-gui/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>jmxtrans GUI</title>
+  <title>JMXTRANS</title>
 
   <!-- build:css({.tmp/serve,src}) styles/vendor.css -->
   <link rel="stylesheet" href="app/vendor.css">
@@ -23,7 +23,7 @@
 
 <div class="jumbotron">
   <div class="container">
-    <h1>Jmxtrans GUI</h1>
+    <h1>JMXTRANS GUI</h1>
   </div>
 </div>
 
@@ -35,11 +35,8 @@
 
     <div class="col-xs-3">
 
-      <button ng-hide="blankServer" type="button" class="btn btn-primary btn-lg btn-block"
-              ng-click="unSavedChanges(addBlankServer)">Create new server
-      </button>
-      <button ng-show="blankServer" type="button" class="btn btn-default btn-lg btn-block"
-              ng-click="unSavedChanges(cancelBlankServer)">Cancel
+      <button type="button" class="btn btn-primary btn-lg btn-block" ng-click="unSavedChanges(createServer)">
+        Create new server
       </button>
       <button type="button" class="btn btn-default btn-lg btn-block" ng-click="unSavedChanges(openUploader)">
         <span class="fa fa-upload"></span> Load JSON files
@@ -55,16 +52,18 @@
           <li class="server-item" ng-repeat="item in list" role="presentation">
             <div class="row">
               <div class="col-sm-7">
-                <button class="btn btn-link" ng-click="unSavedChanges(display, item.host, item.port)" popover="{{ item.host }}:{{ item.port }}" popover-trigger="mouseenter">
+                <button class="btn btn-link" ng-click="unSavedChanges(displayServer, item.host, item.port)"
+                        popover="{{ item.host }}:{{ item.port }}" popover-trigger="mouseenter">
                   {{ printServer(item.host, item.port) }}
                 </button>
               </div>
               <div class="col-sm-5">
                 <button class="btn btn-link"
-                        ng-click="download(item.host, item.port)" style="display: inline-block;" popover="Download" popover-trigger="mouseenter">
+                        ng-click="download(item.host, item.port)" style="display: inline-block;" popover="Download"
+                        popover-trigger="mouseenter">
                   <span class="fa fa-download"></span>
                 </button>
-                <button class="btn btn-link" ng-click="unSavedChanges(duplicate, item.host, item.port)"
+                <button class="btn btn-link" ng-click="unSavedChanges(duplicateServer, item.host, item.port)"
                         style="display: inline-block;" popover="Duplicate" popover-trigger="mouseenter">
                   <span class="fa fa-copy"></span>
                 </button>
@@ -82,9 +81,9 @@
 
     <div class="col-xs-9">
 
-      <server ng-show="server" server="server"></server>
-
-      <server ng-show="blankServer" server="blankServer"></server>
+      <form name="jmxForm">
+        <server ng-show="server" server="server"></server>
+      </form>
 
     </div>
 
